Estilização do menu lateral

--- a/index.html
+++ b/index.html
@@ -33,48 +33,48 @@
     </header>
     <main>
         
-        <article class="container-list">
+        <article>
             <ul>
-                <li class="item-list">
+                <div class="item-list">
                     <img src="assets/img/home.png" alt="">
                     <a href="#">Início</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/compass.png" alt="">
                     <a href="#">Explorar</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/youtube.png" alt="">
                     <a href="#">Inscrições</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/disc.png" alt="">
                     <a href="#">YouTube Music</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/thumbs-up.png" alt="">
                     <a href="#">Vídeos que gostei</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/clock.png" alt="">
                     <a href="#">Assistir mais tarde</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/download (1).png" alt="">
                     <a href="#">Downloads</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/film.png" alt="">
                     <a href="#">Filmes</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/book.png" alt="">
                     <a href="#">Aprender</a>
-                </li>
-                <li class="item-list">
+                </div>
+                <div class="item-list">
                     <img src="assets/img/award.png" alt="">
                     <a href="#">Esportes</a>
-                </li>
+                </div>
             </ul>
         </article>
 
