Estilização do conteudo dentro dos containers

--- a/index.html
+++ b/index.html
@@ -80,20 +80,22 @@
 
 
         <section>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16.png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Geração Tech Unimed - BH - Ciência de Dados</h1>
+                    <h1>Geração Tech Unimed - BH - 
+                        Ciência de Dados
+                    </h1>
                 </div>
                 <p>
                     2,1 mil visualizações
                     Transmitido há 2 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (1).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Scrum Talks</h1>
                 </div>
@@ -102,9 +104,9 @@
                     Transmitido há 3 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (2).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Machine Learning Avançado - Fast Track</h1>
                 </div>
@@ -113,9 +115,9 @@
                     Transmitido há 4 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (3).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Global Skills #2 - Project Planning</h1>
                 </div>
@@ -124,9 +126,9 @@
                     Transmitido há 2 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (4).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Como aprender a programar Python do ZERO</h1>
                 </div>
@@ -135,20 +137,21 @@
                     Transmitido há 2 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16.png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Geração Tech Unimed - BH - Ciência de Dados</h1>
+                    <h1>Geração Tech Unimed - BH - Ciência de Dados
+                    </h1>
                 </div>
                 <p>
                     2,1 mil visualizações
                     Transmitido há 2 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (1).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Scrum Talks</h1>
                 </div>
@@ -157,9 +160,9 @@
                     Transmitido há 3 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (2).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
                     <h1>Machine Learning Avançado - Fast Track</h1>
                 </div>
@@ -168,44 +171,52 @@
                     Transmitido há 4 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (1).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Scrum Talks</h1>
+                    <h1>Scrum Talks
+
+                    </h1>
                 </div>
                 <p>
                     1,6 mil visualizações
                     Transmitido há 3 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (2).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Machine Learning Avançado - Fast Track</h1>
+                    <h1>Machine Learning Avançado - 
+                        Fast Track
+                    </h1>
                 </div>
                 <p>
                     1,7 mil visualizações 
                     Transmitido há 4 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (3).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Global Skills #2 - Project Planning</h1>
+                    <h1>Global Skills #2 - Project 
+                        Planning
+                    </h1>
                 </div>
                 <p>
                     2,1 mil visualizações
                     Transmitido há 2 dias
                 </p>
             </div>
-            <div>
+            <div class="cell-video">
                 <img src="assets/img/image 16 (4).png" alt="">
-                <div>
+                <div class="canal-title">
                     <img src="assets/img/Channel Avatar.png" alt="">
-                    <h1>Como aprender a programar Python do ZERO</h1>
+                    <h1>Como aprender a programar 
+                        Python do ZERO
+                    </h1>
                 </div>
                 <p>
                     711 visualizações
